--- a/src/components/sheet-picker/sheet-tab-selector.module.css
+++ b/src/components/sheet-picker/sheet-tab-selector.module.css
@@ -5,7 +5,6 @@
   padding: 4px 10px;
   display: flex;
   align-items: center;
-  margin-bottom: 20px;;
 }
 
 .tabSelector p {
@@ -20,11 +19,12 @@
 
 .tabSelector .buttonWrapper .tabSelect {
   border-radius: 50px;
-  margin-right: 8px;
+  margin-right: px;
   font-size: 8pt;
-  background-color: #f5f5f5;
   border: none;
   color: #7f7f7f;
+  background-color: #f5f5f5;
+  min-width: 64px;
 }
 
 .tabSelector .buttonWrapper .removeFileButton {
